added branchversion spec and created new createVersion method im emfstore interface

--- a/org.eclipse.emf.emfstore.client.ui/plugin.xml
+++ b/org.eclipse.emf.emfstore.client.ui/plugin.xml
@@ -86,7 +86,7 @@
         </enabledWhen>
      </handler>
      <handler
-           class="org.eclipse.emf.emfstore.client.ui.handlers.CommitProjectHandler"
+           class="org.eclipse.emf.emfstore.client.ui.handlers.CommitProjectToBranchHandler"
            commandId="org.eclipse.emf.emfstore.client.ui.commitProjectToBranch">
         <enabledWhen>
            <and>
