--- a/org.eclipse.emf.emfstore.server.model.edit/plugin.properties
+++ b/org.eclipse.emf.emfstore.server.model.edit/plugin.properties
@@ -424,3 +424,5 @@ _UI_ProjectHistory_sharedProperties_feature = Shared Properties
 _UI_ACUser_effectiveGroups_feature = Effective Groups
 _UI_ProjectHistory_sharedProperties_feature = Shared Properties
 _UI_ACUser_effectiveGroups_feature = Effective Groups
+_UI_VersionSpec_branch_feature = Branch
+_UI_BranchVersionSpec_type = Branch Version Spec
