--- a/org.eclipse.emf.emfstore.server.model.edit/plugin.properties
+++ b/org.eclipse.emf.emfstore.server.model.edit/plugin.properties
@@ -426,3 +426,5 @@ _UI_ProjectHistory_sharedProperties_feature = Shared Properties
 _UI_ACUser_effectiveGroups_feature = Effective Groups
 _UI_VersionSpec_branch_feature = Branch
 _UI_BranchVersionSpec_type = Branch Version Spec
+_UI_Version_ancestorVersion_feature = Ancestor Version
+_UI_Version_branchedVersions_feature = Branched Versions
