--- a/org.eclipse.emf.emfstore.server.model.edit/plugin.properties
+++ b/org.eclipse.emf.emfstore.server.model.edit/plugin.properties
@@ -433,3 +433,6 @@ _UI_ProjectHistory_branches_feature = Branches
 _UI_BranchInfo_head_feature = Head
 _UI_BranchInfo_source_feature = Source
 _UI_BranchInfo_name_feature = Name
+_UI_AncestorVersionSpec_type = Ancestor Version Spec
+_UI_AncestorVersionSpec_target_feature = Target
+_UI_AncestorVersionSpec_source_feature = Source
