--- a/org.eclipse.emf.emfstore.server.model.edit/plugin.properties
+++ b/org.eclipse.emf.emfstore.server.model.edit/plugin.properties
@@ -436,3 +436,5 @@ _UI_BranchInfo_name_feature = Name
 _UI_AncestorVersionSpec_type = Ancestor Version Spec
 _UI_AncestorVersionSpec_target_feature = Target
 _UI_AncestorVersionSpec_source_feature = Source
+_UI_Version_mergedToVersion_feature = Merged To Version
+_UI_Version_mergedFromVersion_feature = Merged From Version
