added field to projectSpace

--- a/org.eclipse.emf.emfstore.client.model.edit/plugin.properties
+++ b/org.eclipse.emf.emfstore.client.model.edit/plugin.properties
@@ -102,3 +102,4 @@ _UI_ProjectSpace_properties_feature = Properties
 _UI_ProjectSpace_changedSharedProperties_feature = Changed Shared Properties
 _UI_ProjectSpace_workspace_feature = Workspace
 _UI_ProjectSpace_localChangePackage_feature = Local Change Package
+_UI_ProjectSpace_mergedVersion_feature = Merged Version
