--- a/org.eclipse.emf.emfstore.server.model.edit/plugin.properties
+++ b/org.eclipse.emf.emfstore.server.model.edit/plugin.properties
@@ -438,3 +438,7 @@ _UI_AncestorVersionSpec_target_feature = Target
 _UI_AncestorVersionSpec_source_feature = Source
 _UI_Version_mergedToVersion_feature = Merged To Version
 _UI_Version_mergedFromVersion_feature = Merged From Version
+_UI_HistoryInfo_nextSpec_feature = Next Spec
+_UI_HistoryInfo_previousSpec_feature = Previous Spec
+_UI_HistoryInfo_mergedFrom_feature = Merged From
+_UI_HistoryInfo_mergedTo_feature = Merged To
