--- a/org.eclipse.emf.emfstore.server.model.edit/plugin.properties
+++ b/org.eclipse.emf.emfstore.server.model.edit/plugin.properties
@@ -442,3 +442,4 @@ _UI_HistoryInfo_nextSpec_feature = Next Spec
 _UI_HistoryInfo_previousSpec_feature = Previous Spec
 _UI_HistoryInfo_mergedFrom_feature = Merged From
 _UI_HistoryInfo_mergedTo_feature = Merged To
+_UI_HistoryQuery_includeAllVersions_feature = Include All Versions
